--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,71 +3,160 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Финансовый трекер</title>
+    <title>💎 Финансовый трекер</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="container">
-    <h1>💰 Мой финансовый трекер</h1>
+<div class="main-wrapper">
+    <!-- HEADER -->
+    <header class="app-header">
+        <h1 class="app-title">
+            <span class="gradient-text">💎 Финансовый трекер</span>
+        </h1>
+        <p class="app-subtitle">Управляйте своими бюджетами эффективно</p>
+    </header>
 
-    <!-- Блок с бюджетами -->
-    <section class="budget-section">
-        <h2>Бюджеты</h2>
-        <button onclick="loadBudgets()">Обновить список</button>
-        <div id="budgetsList">Загрузка...</div>
+    <!-- DASHBOARD GRID -->
+    <div class="dashboard">
+        <!-- LEFT COLUMN -->
+        <div class="column">
+            <!-- БЮДЖЕТЫ -->
+            <section class="card">
+                <div class="card-header">
+                    <h2 class="card-title">📊 Бюджеты</h2>
+                    <button class="btn-refresh" onclick="loadBudgets()" title="Обновить">🔄</button>
+                </div>
 
-        <h3>Добавить бюджет</h3>
-        <form id="budgetForm">
-            <input type="text" id="budgetCategory" placeholder="Категория (например: Еда)" required>
-            <input type="number" id="budgetLimit" placeholder="Лимит (руб.)" required>
-            <button type="submit">Создать</button>
-        </form>
-    </section>
+                <div class="card-content">
+                    <div id="budgetsList" class="list-container">
+                        <div class="loading"></div>
+                    </div>
+                </div>
 
-    <!-- Блок с транзакциями -->
-    <section class="transaction-section">
-        <h2>Транзакции</h2>
-        <button onclick="loadTransactions()">Обновить список</button>
-        <div id="transactionsList">Загрузка...</div>
+                <div class="card-actions">
+                    <h3 class="section-subtitle">Добавить новый бюджет</h3>
+                    <form id="budgetForm" class="action-form">
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="budgetAccount">Название счёта</label>
+                                <input type="text" id="budgetAccount" placeholder="Например: Университет" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="budgetLimit">Лимит (₽)</label>
+                                <input type="number" id="budgetLimit" placeholder="10000" required>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn-primary">➕ Добавить бюджет</button>
+                    </form>
+                </div>
+            </section>
 
-        <h3>Добавить транзакцию</h3>
-        <form id="transactionForm">
-            <input type="text" id="transactionCategory" placeholder="Категория" required>
-            <input type="number" id="transactionAmount" placeholder="Сумма (руб.)" required>
-            <button type="submit">Добавить расход</button>
-        </form>
-    </section>
+            <!-- ПРОВЕРКА ОСТАТКА -->
+            <section class="card accent-card">
+                <div class="card-header">
+                    <h2 class="card-title">🔍 Проверить остаток</h2>
+                </div>
 
-    <!-- Блок "Проверить остаток бюджета" -->
-    <section class="budget-remains-section">
-        <h3>🔍 Проверить остаток бюджета</h3>
-        <form id="budgetRemainsForm">
-            <input type="text" id="remainsCategory" placeholder="Категория бюджета" required>
-            <input type="date" id="remainsDate" placeholder="Дата (необязательно)">
-            <button type="submit">Посмотреть остаток</button>
-        </form>
-        <div id="remainsResult" style="margin-top: 15px; font-weight: bold; color: #667eea;"></div>
-    </section>
+                <div class="card-actions">
+                    <form id="budgetRemainsForm" class="action-form">
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="remainsAccount">Счёт</label>
+                                <input type="text" id="remainsAccount" placeholder="Название счёта" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="remainsDate">Дата (необязательно)</label>
+                                <input type="date" id="remainsDate">
+                            </div>
+                        </div>
+                        <button type="submit" class="btn-accent">📊 Посмотреть остаток</button>
+                    </form>
+                    <div id="remainsResult" class="result-box"></div>
+                </div>
+            </section>
+        </div>
 
-    <!-- Блок "Изменить категорию бюджета" -->
-    <section class="budget-category-section">
-        <h3>✏️ Изменить категорию бюджета</h3>
-        <form id="changeCategoryForm">
-            <input type="text" id="oldCategory" placeholder="Старая категория" required>
-            <input type="text" id="newCategory" placeholder="Новая категория" required>
-            <button type="submit">Изменить категорию</button>
-        </form>
-    </section>
+        <!-- RIGHT COLUMN -->
+        <div class="column">
+            <!-- ТРАНЗАКЦИИ -->
+            <section class="card">
+                <div class="card-header">
+                    <h2 class="card-title">🧾 Транзакции</h2>
+                    <button class="btn-refresh" onclick="loadTransactions()" title="Обновить">🔄</button>
+                </div>
 
-    <!-- Блок "Изменить лимит бюджета" -->
-    <section class="budget-limit-section">
-        <h3>💵 Изменить лимит бюджета</h3>
-        <form id="changeLimitForm">
-            <input type="text" id="limitCategory" placeholder="Категория бюджета" required>
-            <input type="number" id="newLimit" placeholder="Новый лимит (руб.)" required>
-            <button type="submit">Изменить лимит</button>
-        </form>
-    </section>
+                <div class="card-content">
+                    <div id="transactionsList" class="list-container">
+                        <div class="loading"></div>
+                    </div>
+                </div>
+
+                <div class="card-actions">
+                    <h3 class="section-subtitle">Добавить новую транзакцию</h3>
+                    <form id="transactionForm" class="action-form">
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="transactionAccount">Счёт</label>
+                                <input type="text" id="transactionAccount" placeholder="Например: Университет" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="transactionAmount">Сумма (₽)</label>
+                                <input type="number" id="transactionAmount" placeholder="500" required>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn-primary">💸 Добавить расход</button>
+                    </form>
+                </div>
+            </section>
+
+            <!-- УПРАВЛЕНИЕ -->
+            <section class="card">
+                <div class="card-header">
+                    <h2 class="card-title">⚙️ Управление счетами</h2>
+                </div>
+
+                <div class="card-actions">
+                    <!-- Изменить счёт -->
+                    <div class="action-block">
+                        <h3 class="section-subtitle">✏️ Переименовать счёт</h3>
+                        <form id="changeAccountForm" class="action-form">
+                            <div class="form-row">
+                                <div class="form-group">
+                                    <label for="oldAccount">Старое название</label>
+                                    <input type="text" id="oldAccount" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="newAccount">Новое название</label>
+                                    <input type="text" id="newAccount" required>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn-secondary">Сохранить изменения</button>
+                        </form>
+                    </div>
+
+                    <!-- Изменить лимит -->
+                    <div class="action-block">
+                        <h3 class="section-subtitle">💵 Изменить лимит</h3>
+                        <form id="changeLimitForm" class="action-form">
+                            <div class="form-row">
+                                <div class="form-group">
+                                    <label for="limitAccount">Счёт</label>
+                                    <input type="text" id="limitAccount" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="newLimit">Новый лимит (₽)</label>
+                                    <input type="number" id="newLimit" required>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn-secondary">Обновить лимит</button>
+                        </form>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
 </div>
 
 <script src="/js/app.js"></script>
